# su-exec-rs

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .prettierignore  .rustfmt.toml  .shellcheckrc  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  codecov.yml  justfile  ubi9.Dockerfile
.github/: FUNDING.yml
.github/workflows/: release.yml.disabled  rust-clippy.yml  rust-clippy.yml.disabled
docker/: compose.yml  fedora.Dockerfile  ubi9.Dockerfile  ubuntu.Dockerfile
scripts/: install.sh
src/: low_overhead.rs  main.rs  su-exec-rs.md
tests/: build.sh  source.c  su-exec.c
