[package]
name = "su-exec-rs"
version = "0.1.0"
description = """
su-exec-rs is used in a container to switch the user and group id and then exec.
"""
documentation = "https://github.com/thimslugga/su-exec-rs"
authors = ["Adam Kaminski <adam@adamkaminski.com>"]
homepage = "https://github.com/thimslugga/su-exec-rs"
repository = "https://github.com/thimslugga/su-exec-rs"
readme = "README.md"
keywords = ["linux", "docker", "kubernetes", "containers", "security"]
categories = ["tools", "security", "system", "linux", "containers"]
license = "MIT"
exclude = ["/.github/", "/ci/", "/scripts/"]
#build = "build.rs"
autotests = false
publish = false
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "su-exec-rs"
path = "src/main.rs"
bench = false
test = false
doc = false

#[[test]]
#name = "integration"
#path = "tests/tests.rs"

#[features]
#default = ["idiomatic"]
#idiomatic = []
#low_overhead = []

[dependencies]
libc = "0.2"
users = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
users = "0.11"

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
section = "utils"
assets = [
  [
    "target/release/su-exec-rs",
    "usr/bin/",
    "755",
  ],
  [
    "COPYING",
    "usr/share/doc/su-exec-rs/COPYING",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/doc/su-exec-rs/LICENSE",
    "644",
  ],
  [
    "CHANGELOG.md",
    "usr/share/doc/su-exec-rs/CHANGELOG",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/su-exec-rs/README",
    "644",
  ],
  [
    "FAQ.md",
    "usr/share/doc/su-exec-rs/FAQ",
    "644",
  ],
  # The man page is automatically generated by ripgrep's build process, so
  # this file isn't actually committed. Instead, to create a dpkg, either
  # create a deployment/deb directory and copy the man page to it, or use the
  # 'ci/build-deb' script.
  #["deployment/deb/gather.1", "usr/share/man/man1/gather.1", "644"],
  # Similarly for shell completions.
  #["deployment/deb/gather.bash", "usr/share/bash-completion/completions/gather", "644"],
  #["deployment/deb/gather.fish", "usr/share/fish/vendor_completions.d/gather.fish", "644"],
  #["deployment/deb/_gather", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
gather is a command-line tool that gathers files, directories and command output.
"""

[lints.clippy]
enum_glob_use = "warn"
